--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,17 @@
 spring:
   datasource:
-    # url: jdbc:postgresql://192.168.99.100:5432/tmdb?useUnicode=true&characterEncoding=utf-8
-    # url: jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:tmdb}?useSSL=false&useUnicode=true&characterEncoding=utf-8
     url: jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:tmdb}?createDatabaseIfNotExist=true
     username: ${POSTGRES_USER:postgres}
     password: ${POSTGRES_PASSWORD:postgres}
     sqlScriptEncoding: UTF-8
     initialization-mode: never
-    # !!! https://auth0.com/blog/integrating-spring-data-jpa-postgresql-liquibase/
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
     generate-ddl: true
     hibernate:
-      ddl-auto: validate # do not use others wiht liqubase
+      ddl-auto: validate
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.xml
 ---
@@ -31,7 +28,6 @@ spring:
     console:
       enabled: true
       path: /h2
-      # http://localhost:8080/h2
   jpa:
     hibernate:
       ddl-auto: validate
